fix: mobile layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,22 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>FriendsOfShopware Bot Dashboard</title>
+	<link rel="icon" type="image/png" sizes="180x180" href="/favicon.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+	<title>FriendsOfShopware Dashboard</title>
+	<meta name="description" content="FriendsOfShopware Dashboard for dispatching automation commands and tracking execution history and repository kanban activity." />
+	<meta name="theme-color" content="#4f46e5" />
+	<link rel="canonical" href="https://dash.fos.gg/" />
+
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="FriendsOfShopware Dashboard" />
+	<meta property="og:title" content="FriendsOfShopware Dashboard" />
+	<meta property="og:description" content="Dispatch automation commands, view execution history, and track repository activity in one place." />
+	<meta property="og:url" content="https://dash.fos.gg/" />
+
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="FriendsOfShopware Dashboard" />
+	<meta name="twitter:description" content="Dispatch automation commands, view execution history, and track repository activity in one place." />
 </head>
 <body>
 	<div id="app"></div>
